# Endgame

./: .gitignore  CHANGELOG.md  README.md  endgame - Copy.db  endgame.cabal  endgame.db  endgame.hs  endgame.sqlite  endgame2.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
endgame/: Main.hs
endgame-programs/: everyotherday.txt  standard-everyday.txt  standard-everyotherday.txt  standard-half-days.txt
src/: AdvanceCycles.hs  AdvanceStats.hs  Arguments.hs  CLIFormating.hs  CLILogFormat.hs  CLIProgramFormat.hs  CLIStatsFormat.hs  CurrentLog.hs  Date.hs  EndgameGeneralTypes.hs  EndgameLog.hs  EndgameProgram.hs  EndgameStats.hs  FileHandling.hs  FirstStatsOfProgram.hs  GetLog.hs  LogParsing.hs  NewLog.hs  NextLog.hs  NextLogs.hs  ProgramParsing.hs  TrainingLog.hs
src/Advance/: Cycles.hs  PRs.hs  Stats.hs
src/CLI/: ArgumentEnsuring.hs  Arguments.hs  CreateProfile.hs  CreateProgram.hs  Input.hs  LogFormat.hs  ProgramFormat.hs  SelectProgram.hs  SetupStats.hs  StatsFormat.hs
src/CLI/Edit/: LiftCycle.hs  LiftGroupCycle.hs
src/CLI/Endgame/: Add.hs  Bodyweight.hs  Convert.hs  Fail.hs  Help.hs  Lifts.hs  Log.hs  NextLog.hs  Profile.hs  Program.hs  Remove.hs
src/CLI/Format/: Log.hs
src/CLI/Input/: Defaulted.hs  Input.hs  Readers.hs
src/Convert/: Log.hs  Program.hs  Stats.hs
src/Db/: FromSchema.hs  Schema.hs  Sqlite.hs
src/Endgame/: Add.hs  Bodyweight.hs  Help.hs  Lifts.hs  Log.hs  NextLog.hs  Profile.hs  Program.hs
src/File/: Path.hs  Profile.hs  ProfileManagement.hs
src/Log/: Format.hs  Log.hs  Session.hs  Set.hs
src/Misc/: Compose.hs
src/Profile/: NextLifts.hs  NextLog.hs  Profile.hs
src/Profile/Advance/: Lifts.hs  Prs.hs  SetTypes.hs
src/Program/: Format.hs  LiftCycle.hs  LiftGroupCycle.hs  LiftInfo.hs  Program.hs  Session.hs  Set.hs
src/Server/: Main.hs  Password.hs  RequestTypes.hs  ResponseTypes.hs
src/Server/RequestTypes/: LoginRequest.hs  RequestTypes.hs
src/Setup/: NewPrograms.hs  Programs.hs  Setup.hs
src/Stats/: Format.hs  LiftStats.hs  Stats.hs
src/Types/: EndgameGeneralTypes.hs  EndgameLog.hs  EndgameProgram.hs  EndgameStats.hs  General.hs  GeneralTypes.hs  Log.hs  Program.hs  Stats.hs
test/: AdvanceCycle.hs  AdvanceCycleTest.hs  LogFormatTest.hs  ProgramFormatTest.hs  StatsFormatTest.hs  Test.hs  TestProgram.hs
