cabal-version:      2.4
name:               endgame
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             OleAndreasER
maintainer:         oleaegeland@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable endgame
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Setup.Setup,
                      Setup.Programs,
                      CLI.Arguments,
                      CLI.LogFormat,
                      CLI.ProgramFormat,
                      CLI.StatsFormat,
                      CLI.SetupStats,
                      CLI.Input,
                      CLI.ArgumentEnsuring,
                      Types.General,
                      Types.Program,
                      Types.Log,
                      Types.Stats,
                      Advance.Cycles,
                      Advance.PRs,
                      CurrentLog,
                      NextLogs,
                      FileHandling,
                      FirstStatsOfProgram


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0,
                      directory ^>=1.3.6.2,
                      split ^>=0.2.3.4,
                      binary ^>=0.8.9.0,
                      yjtools ^>=0.9.18 
    hs-source-dirs:   app, src
    default-language: Haskell2010
